# dbt_core_jaffle_shop

./: .dbt-checkpoint.yaml  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
jaffle_shop/: .dbt-checkpoint.yaml  .pre-commit-config.yaml  .user.yml  dbt_project.yml
jaffle_shop/docs/: orders.md  stripe_payments.md
jaffle_shop/models/: customers.sql  dim_orders.sql  schema.yml  source.yml
jaffle_shop/models/marts/: dim_customers.sql  dim_customers.yml  dim_orders.sql  dim_orders.yml
jaffle_shop/models/raw/: schema.yml
jaffle_shop/models/staging/: stg_customers.sql  stg_customers.yml  stg_orders.sql  stg_orders.yml  stg_stripe_payments.sql  stg_stripe_payments.yml  stg_success_stripe_payment.sql
jaffle_shop/models/staging/stripe/: stg_stripe_payments.sql  stripe_sources.yml
