[tool.poetry]
name = "dbt-core-jaffle-shop"
version = "0.1.0"
description = "A dbt core roject using jaffle_shop data"
authors = ["sevkw <kwang0422@gmail.com>"]
readme = "README.md"
packages = [{include = "dbt_core_jaffle_shop"}]

[tool.poetry.dependencies]
python = "^3.10"
dbt-core = "^1.6.1"
dbt-bigquery = "^1.6.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
